# mail-server-api

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  schema.sql
mail-frontend/: Dockerfile  index.html  package.json
mail-frontend/src/: App.tsx  index.css
mail-frontend/src/components/: ApiPlayground.tsx
src/: lib.rs  main.rs
src/api/: routes.rs  routes.rs_snippet
src/core/: gmail_api.rs  imap_client.rs  jwt.rs  limiter.rs  mod.rs  oauth.rs  workos_auth.rs
src/workers/: smtp.rs
