[package]
name = "mail-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.6"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
mail-parser = "0.8"
chrono = { version = "0.4", features = ["serde"] }
async-imap = "0.9"
async-native-tls = "0.5"
async-std = { version = "1.13", features = ["attributes"] }
futures = "0.3"
oauth2 = "4.4"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
jsonwebtoken = "9"
bcrypt = "0.15"
url = "2.5"
uuid = { version = "1", features = ["v4"] }




